[cloud_file]: 'FileStorageViewSet' and swagger was updated.
